apps/web/src/app/_shared/components/pdf-editor/pdf-editor-toolbar/pdf-editor-toolbar.component.scss
.dropdown-toggle::after {
    display:none;
}

.tool-options-dropdown {
    top: 52px;
    height: 35px;
    padding: 0px;
    border: none;
    border-radius: 0px;
    -webkit-box-shadow: 0px 0px 3px 2px #9c9c9c2a; 
    box-shadow: 0px 0px 3px 2px #9c9c9c49;
}

.tool-shapes-dropdown {
    border: none;
    border-radius: 0px;
    -webkit-box-shadow: 0px 0px 3px 2px #9c9c9c2a; 
    box-shadow: 0px 0px 3px 2px #9c9c9c49;

    i {
        margin-right: 10px;
    }
}

.tool-shapes-dropdown.tool-options-dropdown {
    left: -30px;
}

.zoom-controls {
    margin-right: 8px;
    padding-left: 10px;
    padding-right: 10px;
    border-right: rgba(128, 128, 128, 0.117) 1px solid;
}

.pagination-controls {
    width: 100%;    
}

.mobile-toolbar {
    display: none;
}

.btn-pan-active {
    background-color: rgba(78, 78, 78, 0.199);
}


@media screen and (max-width: 900px) {
    .mobile-toolbar {
        display: block;
    }

    .zoom-controls {
        display: none;
    }

}

